Updated portfolio and fixed up responsive element for viewing on mobiles and different screen sizes

--- a/Assets/portfolio.css
+++ b/Assets/portfolio.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #454545;
+  background-color: black;
 }
 #myBtn {
     display: none; /* Hidden by default */
@@ -53,12 +53,40 @@ body {
   right: 0;
   top: 0;
 }
+.header h1 h6{
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
 
 .header h1 {
-    position: relative;
-    top: 0px;
-    left: 30px;
-    flex: 100%;
+   color: #ffffff;
     font-size: 48px;
   }
 h2 {
@@ -75,33 +103,20 @@ h4 {
     }
 h5 {
       color: greenyellow;
-      
+}
+
+.header h6 {
+       
+        font-size: 34px;
+        color: aqua;
       }
+      
+      
 span { 
     color: greenyellow;
 }
-  .header {
-    padding: 10px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: black;
-    color: #ffffff;
-  }
-  /* Top right text */
-.top-right {
-    flex: 100%;
-    position: absolute;
-    top: 200px;
-    right: 16px;
-    font-size: 40px;
-    color: white;
-    font-style: italic;
-  }
-  .vertical {
-  color: #ffffff;
-  font-size: 80px;
-  text-align: center;
 
-}
+  
 p {
     flex: 100%;
     font-style: italic;
@@ -158,27 +173,3 @@ p {
     position: relative;
    
   }
-  
-
-@media screen and (max-width: 600px) {
-  .topnav a,
-  .topnav a.icon {
-    float: right;
-    display: block;
-
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
